# AI_Shell_Llama_VMM

./: Notes  run_ai_shell.bat  run_ai_shell_gpu.bat  run_ai_shell_vmm_use.bat
Logs/: 5302026 - 3.txt  5302026.txt  CMakeLists.txt  Notes bob  VMM fix repack.txt  good and bad jb buffer.txt  npm install stuffs.txt  run_ai_shell_debug.bat  star google devmode for browser.txt
ai_shell/: 5302026.txt  CMakeListfor src llama.txt  README.md  ai_shell.sln  ai_shell.vcxproj  ai_shell.vcxproj.filters  resource.h
ai_shell/core/: plugin.c
ai_shell/engine/: engine.c  engine.h  engine_debug.c  engine_kv.c  engine_kv.h
ai_shell/include/: plugin.h
ai_shell/llama/: ggml-alloc.c  ggml-alloc.h  ggml-backend.cpp  ggml-backend.h  ggml.c  ggml.h  gguf.cpp  gguf.h  llama-model-loader.cpp  llama-model-loader.h  llama.h
ai_shell/loader/: gguf_loader.c  gguf_loader.h
ai_shell/main/: ai_shell.c
ai_shell/main/x64/Debug/: vc143.idb
ai_shell/main/x64/Debug/ai_shell.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ai_shell.lastbuildstate
ai_shell/plugins/: brave.c  browser_dispatcher.c  browser_dispatcher.h  chromium.c  ddg.c  exa_fetch.c  exa_fetch.h  exa_search.c  exa_search.h  summarize_file.c  websearch.c
ai_shell/server/: chat.html  chat_old.html  http_server.c  http_server.h  summarize_file_html.c  test.html
ai_shell/src/: extmem.c  extmem.h  http_winhttp.c  http_winhttp.h  pager.c  pager.h  server.c  server.h  util.c  util.h  vmm.patch  vmm.patch.txt
ai_shell/vmm/: vmm.c  vmm.h
ai_shell_desktop/: package-lock.json  package.json
ai_shell_desktop/src/: App.jsx
ai_shell_desktop/src-tauri/: Cargo.toml  tauri.conf.json
ai_shell_desktop/src-tauri/src/: main.rs
ai_shell_desktop/src/components/: ChatInput.jsx  ChatWindow.jsx  MessageBubble.jsx  Sidebar.jsx
ai_shell_desktop/src/styles/: App.css  layout.css
